--- a/designer-furniture/frontend/src/assets/css/about.css
+++ b/designer-furniture/frontend/src/assets/css/about.css
@@ -1,51 +1,72 @@
 /* about section */
-.about .inner-wrapper{
-  width: 100%;
-  height: auto;
-  display: inline-block;
-  padding-top: 80px;
+.about .inner-wrapper {
+    width: 100%;
+    height: auto;
+    display: inline-block;
+    padding-top: 80px;
 }
 
 .inner-wrapper .left-side,
-.inner-wrapper .right-side{
-  width: 50%;
-  float: left;
+.inner-wrapper .right-side {
+    width: 50%;
+    float: left;
+}
+
+.inner-wrapper .left-side {
+    padding-left: 40px;
 }
 
 /* left side */
-.left-side .about-img{
-  width: 100%;
-  overflow: hidden;
-  border-radius: 5px;
-  box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+.left-side .about-img {
+    width: 100%;
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
 }
-.left-side .about-img img{
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-fit: cover;
-  object-position: center;
+.left-side .about-img img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    object-position: center;
 }
 
-.inner-wrapper .right-side{
-  padding-left: 40px;
+.inner-wrapper .right-side {
+    padding-left: 40px;
 }
 
 /* right side */
-.right-side h3{
-  font-size: 30px;
-  font-weight: 700;
-  font-family: var(--font-2);
-  /* text-decoration: underline;
+.right-side h3 {
+    font-size: 30px;
+    font-weight: 700;
+    font-family: var(--font-2);
+    /* text-decoration: underline;
   text-underline-offset: 10px; */
-  border-bottom: 2px solid var(--black);
-  padding-bottom: 10px;
-  border-bottom-style: dashed;
-  margin-bottom: 20px;
+    border-bottom: 2px solid var(--black);
+    padding-bottom: 10px;
+    border-bottom-style: dashed;
+    margin-bottom: 20px;
 }
-.right-side p{
-  font-size: 17px;
-  font-weight: 500;
-  padding-bottom: 20px;
-  text-align: justify;
+.right-side p {
+    font-size: 17px;
+    font-weight: 500;
+    padding-bottom: 20px;
+    text-align: justify;
+}
+
+@media screen and (max-width: 990px) {
+    .about .inner-wrapper {
+        display: flex;
+        flex-direction: column-reverse;
+        padding: 0 10px;
+    }
+    .inner-wrapper .left-side,
+    .inner-wrapper .right-side {
+        width: 100%;
+        float: none;
+        padding-left: 0;
+    }
+    .inner-wrapper .right-side {
+        margin-top: 30px;
+    }
 }
